Add some docs about placeholders in the filename edit line

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -29,7 +29,7 @@
 
         <legalnotice>&FDLNotice;</legalnotice>
 
-        <date>2019-03-08</date>
+        <date>2019-03-20</date>
         <releaseinfo>Applications 19.04</releaseinfo>
 
         <abstract>
@@ -333,15 +333,18 @@
                         <para>Set a default filename for saved screenshots.</para>
                         <para>You can use the following placeholders in the filename, which will be replaced with actual text when the file is saved:</para>
                         <itemizedlist>
-                        <listitem><para><userinput>%Y</userinput>: Year (4 digit)</para></listitem>
-                        <listitem><para><userinput>%y</userinput>: Year (2 digit)</para></listitem>
-                        <listitem><para><userinput>%M</userinput>: Month</para></listitem>
                         <listitem><para><userinput>%D</userinput>: Day</para></listitem>
                         <listitem><para><userinput>%H</userinput>: Hour</para></listitem>
-                        <listitem><para><userinput>%m</userinput>: Minute</para></listitem>
+                        <listitem><para><userinput>%M</userinput>: Month</para></listitem>
+                        <listitem><para><userinput>%Nd</userinput>: Sequential number padded to N digits</para></listitem>
                         <listitem><para><userinput>%S</userinput>: Second</para></listitem>
                         <listitem><para><userinput>%T</userinput>: Window title</para></listitem>
+                        <listitem><para><userinput>%Y</userinput>: Year (4 digit)</para></listitem>
+                        <listitem><para><userinput>%Nd</userinput>: Sequential number</para></listitem>
+                        <listitem><para><userinput>%m</userinput>: Minute</para></listitem>
+                        <listitem><para><userinput>%y</userinput>: Year (2 digit)</para></listitem>
                         </itemizedlist>
+                        <para>You can click on placeholders in the reference list below to insert them into the <guilabel>Filename</guilabel> line.</para>
                         <para>If a file with this name already exists, a serial number will be appended to the filename. For example, if the filename is <filename>Screenshot</filename>, and <filename>Screenshot.png</filename> already exists, the image will be saved as <filename>Screenshot-1.png</filename>.</para>
                         <para>Typing an extension into the filename will automatically set the image format correctly and remove the extension from the filename field.</para>
                     </listitem>
