Update reviewboard to phabricator inside README

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ for development.
 Please see the file CONTRIBUTING for details on coding style and how
 to contribute patches. Please note that pull requests on GitHub aren't
 supported. The recommended way of contributing patches is via KDE's
-ReviewBoard at https://git.reviewboard.kde.org/
+instance of phabricator at https://phabricator.kde.org/
 
 Release Schedule
 ****************
