Fix link: ui.html -> menus.html

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -202,7 +202,7 @@
                 <varlistentry>
                     <term><guibutton>Help</guibutton></term>
                     <listitem>
-                        <para>Gives you the common menu items described in the <ulink url="help:/fundamentals/ui.html#menus-help">Help Menu</ulink> of the &kde; Fundamentals.</para>
+                        <para>Gives you the common menu items described in the <ulink url="help:/fundamentals/menus.html#menus-help">Help Menu</ulink> of the &kde; Fundamentals.</para>
                     </listitem>
                 </varlistentry>
                 <varlistentry>
