Sync docs with code

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -29,8 +29,8 @@
 
         <legalnotice>&FDLNotice;</legalnotice>
 
-        <date>2019-08-28</date>
-        <releaseinfo>Applications 19.12</releaseinfo>
+        <date>2019-12-28</date>
+        <releaseinfo>Applications 20.04</releaseinfo>
 
         <abstract>
             <para>&spectacle; is a simple application for capturing desktop screenshots. It can capture images of the entire desktop, a single monitor, the currently active window, the window currently under the mouse, or a rectangular region of the screen. The images can then be printed, sent to other applications for manipulation, or quickly be saved as-is.</para>
@@ -217,7 +217,7 @@
                         <para>Opens a drop-down menu which offers various tools:</para>
                         <itemizedlist>
                             <listitem>
-                                <para><guimenuitem>Open Screenshots Folder</guimenuitem> will highlight the last saved screenshot in the default file manager</para>
+                                <para><guimenuitem>Open Default Screenshots Folder</guimenuitem> will highlight the last saved screenshot in the default file manager</para>
                             </listitem>
                             <listitem>
                                 <para>Access to the <guimenuitem>Print</guimenuitem> dialog</para>
