Use the common name for the 'PrtSc' key in docs
BUG: 419247

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -64,11 +64,11 @@
                 <para>In the application launcher menu, &spectacle; can be found at <menuchoice><guisubmenu>Applications</guisubmenu><guisubmenu>Utilities</guisubmenu><guimenuitem>Screenshot Capture Utility &spectacle;</guimenuitem></menuchoice></para>
             </listitem>
             <listitem>
-                <para>Pressing the <keysym>Print</keysym> button on the keyboard will immediately launch &spectacle;. Additionally, three more keyboard shortcuts are available to take screenshots and save them in your default save folder without showing the &GUI;:</para>
+                <para>Pressing the <keysym>Print Screen</keysym> button on the keyboard (often labeled <keycap>PrtSc</keycap>, <keycap>PrtScn</keycap> or similar) will immediately launch &spectacle;. Additionally, three more keyboard shortcuts are available to take screenshots and save them in your default save folder without showing the &GUI;:</para>
                 <itemizedlist>
-                <listitem><para><keycombo action="simul"><keycap>Meta</keycap><keysym>Print</keysym></keycombo> will take a screenshot of the active window</para></listitem>
-                <listitem><para><keycombo action="simul">&Shift;<keysym>Print</keysym></keycombo> will take a screenshot of your entire desktop, &ie; all monitors</para></listitem>
-                <listitem><para><keycombo action="simul"><keycap>Meta</keycap>&Shift;<keysym>Print</keysym></keycombo> will take a rectangular region screenshot</para></listitem>
+                <listitem><para><keycombo action="simul"><keycap>Meta</keycap><keysym>Print Screen</keysym></keycombo> will take a screenshot of the active window</para></listitem>
+                <listitem><para><keycombo action="simul">&Shift;<keysym>Print Screen</keysym></keycombo> will take a screenshot of your entire desktop, &ie; all monitors</para></listitem>
+                <listitem><para><keycombo action="simul"><keycap>Meta</keycap>&Shift;<keysym>Print Screen</keysym></keycombo> will take a rectangular region screenshot</para></listitem>
                 </itemizedlist>
                 <para>You can configure the default save location and filename by starting &spectacle; normally and clicking on the <guibutton>Configure...</guibutton> button, then navigating to the Save section.</para>
             </listitem>
