Update README and CONTRIBUTING for gitlab and release service

--- a/README
+++ b/README
@@ -12,16 +12,16 @@ for development.
 Please see the file CONTRIBUTING for details on coding style and how
 to contribute patches. Please note that pull requests on GitHub aren't
 supported. The recommended way of contributing patches is via KDE's
-instance of phabricator at https://phabricator.kde.org/
+instance of gitlab at https://invent.kde.org/graphics/spectacle.
 
 Release Schedule
 ****************
 
-Spectacle is released as part of the KDE Applications suite and has three
+Spectacle is released by KDE's release service and has three
 major releases every year. They are numbered YY.MM, where YY is the two-
 digit year and MM is the two-digit month. Major releases are made in April,
 August and December every year. The Spectacle version follows the KDE
-Applications release version.
+release service  version.
 
 Reporting Bugs
 **************
