--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -29,7 +29,7 @@
 
         <legalnotice>&FDLNotice;</legalnotice>
 
-        <date>2021-04-11</date>
+        <date>2021-04-25</date>
         <releaseinfo>Applications 21.08</releaseinfo>
 
         <abstract>
@@ -257,9 +257,9 @@
                     </listitem>
                 </varlistentry>
                 <varlistentry>
-                    <term><guibutton>Copy to Clipboard</guibutton></term>
+                    <term><guibutton>Copy Image to Clipboard/Copy Location to Clipboard</guibutton></term>
                     <listitem>
-                        <para>Copies the current screenshot to the clipboard. You can also use the <keycombo action="simul">&Ctrl;<keycap>C</keycap></keycombo> keyboard shortcut for this.</para>
+                        <para>Copies the current screenshot or its location to the clipboard. You can also use the <keycombo action="simul">&Ctrl;<keycap>C</keycap></keycombo> keyboard shortcut for this.</para>
                     </listitem>
                 </varlistentry>
                 <varlistentry>
