--- a/doc/man-spectacle.1.docbook
+++ b/doc/man-spectacle.1.docbook
@@ -162,7 +162,7 @@
 </refsect1>
 
 <refsect1 id="feedback"><title>Feedback</title>
-<para>On IRC, irc.freenode.net #kde or via email, kde-graphics-devel@kde.org or on the web, &lt;<ulink url="https://kde.org/applications/spectacle">https://kde.org/applications/spectacle</ulink>&gt;</para>
+<para>On IRC, irc.freenode.net #kde or via email, kde-graphics-devel@kde.org or on the web, &lt;<ulink url="https://apps.kde.org/spectacle">https://apps.kde.org/spectacle</ulink>&gt;</para>
 </refsect1>
 
 <refsect1>
@@ -176,7 +176,7 @@ url="help:/spectacle">help:/spectacle</ulink>
 <member>kf5options(7)</member>
 <member>qt5options(7)</member>
 <member>There is also further information available at
-<ulink url="https://kde.org/applications/spectacle">https://kde.org/applications/spectacle</ulink></member>
+<ulink url="https://apps.kde.org/spectacle">https://apps.kde.org/spectacle</ulink></member>
 </simplelist>
 </refsect1>
 
