Sync docs with the current interface

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -288,7 +288,7 @@
                 <varlistentry>
                     <term><guilabel>After taking a screenshot</guilabel></term>
                     <listitem>
-                        <para>Allows copying image to clipboard or autosave the image to the default location. The default location can be configured using the <link linkend="save-page">Save</link> configuration page. It is possible to <guilabel>Copy file location to clipboard after saving</guilabel>. You can then paste it anywhere that accepts text input. Note that you must be running a clipboard manager in order to keep the path in the clipboard after &spectacle; quits.</para>
+                        <para>Allows <guilabel>Autosave file to default folder</guilabel>, switching off any clipboard actions, copying the image to clipboard, or copying screenshot path to the clipboard. The default location can be configured using the <link linkend="save-page">Save</link> configuration page. It is possible to <guilabel>Copy file location to clipboard</guilabel>. You can then paste it anywhere that accepts text input. Note that you must be running a clipboard manager in order to keep the path in the clipboard after &spectacle; quits.</para>
                     </listitem>
                 </varlistentry>
                 <varlistentry>
