Update IRC network name in the manpage
KDE has moved from freenode to Libera Chat, update the spectacle manpage to
mention the new server.

--- a/doc/man-spectacle.1.docbook
+++ b/doc/man-spectacle.1.docbook
@@ -162,7 +162,7 @@
 </refsect1>
 
 <refsect1 id="feedback"><title>Feedback</title>
-<para>On IRC, irc.freenode.net #kde or via email, kde-graphics-devel@kde.org or on the web, &lt;<ulink url="https://apps.kde.org/spectacle">https://apps.kde.org/spectacle</ulink>&gt;</para>
+<para>On IRC, irc.libera.chat #kde or via email, kde-graphics-devel@kde.org or on the web, &lt;<ulink url="https://apps.kde.org/spectacle">https://apps.kde.org/spectacle</ulink>&gt;</para>
 </refsect1>
 
 <refsect1>
