--- a/doc/man-spectacle.1.docbook
+++ b/doc/man-spectacle.1.docbook
@@ -83,6 +83,13 @@
 </varlistentry>
 
 <varlistentry>
+<term><option>-l, --launchonly</option></term>
+<listitem>
+<para>Launch Spectacle without taking a screenshot.</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><option>-g, --gui</option></term>
 <listitem>
 <para>Start in GUI mode (default).</para>
